# polyline-station-offset

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
src/station_offset/: __init__.py  __main__.py  core.py  io.py
tests/: conftest.py  test_core.py  test_core_comprehensive.py  test_core_smoke.py  test_io.py
tests/fixtures/: complex_polyline.csv  simple_polyline.csv
